--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "canvasjs": "^1.8.3",
+    "canvasjs-react-charts": "^1.0.5",
+    "chart.js": "^2.9.4",
+    "jquery": "^3.5.1",
     "react": "^17.0.1",
+    "react-canvas-js": "^1.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-google-charts": "^3.0.15",
     "react-scripts": "4.0.1",
+    "react-vis": "^1.11.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
